# yrouter-websockets

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py
examples/: example.py
src/yrouter_websockets/: __init__.py  router.py  router_protocol.py
tests/: conftest.py  handlers.py  routes.py  test_pyrouter_websockets.py  test_yrouter_websockets.py
