[metadata]
name = yrouter-websockets
version = 0.0.1
author = Tidiane Dia
author_email = tidiane@therookiecoder.com
description = A URL routing package for the websockets library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tijani-dia/yrouter-websockets
project_urls =
    Bug Tracker = https://github.com/pypa/tijani-dia/yrouter-websockets
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
[bdist_wheel]
python-tag = py3

[tool:pytest]
testpaths=tests

[tool:isort]
profile = black

[flake8]
max-line-length = 92